--- a/todo2.css
+++ b/todo2.css
@@ -1,5 +1,6 @@
 body {
   background-color: #33CCFF;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .high {
@@ -20,4 +21,5 @@ body {
 .done {
   background-color: black;
   color: white;
+  text-decoration: line-through;
 }
