--- a/todo2.css
+++ b/todo2.css
@@ -1,6 +1,7 @@
 body {
   background-color: #33CCFF;
   font-family: Arial, Helvetica, sans-serif;
+  float: left;
 }
 
 .high {
@@ -31,4 +32,8 @@ section {
   margin-top: 10px;
   margin-bottom: 10px;
   border: 2px dotted purple;
+}
+
+footer {
+  clear: both;
 }
