--- a/index.css
+++ b/index.css
@@ -2,3 +2,17 @@ body {
       background-color: #33CCFF;
       font-family: Arial, Helvetica, sans-serif;
   }
+  
+header {
+      position: fixed;
+      background-color: #FF9900;
+      top: 0px;
+      left: 0px;
+      width: 100%;
+      height: 20px;
+}
+nav {
+      margin-top: 20px;
+      margin-bottom: 0px;
+      background-color: #FF9900;
+}
