--- a/index.css
+++ b/index.css
@@ -30,3 +30,7 @@ section.right {
       background-color: #FFCCFF;
       height: 500px;
 }
+footer {
+      clear: both;
+      background-color: #99FF66;
+}
