--- a/checklist.css
+++ b/checklist.css
@@ -1,1 +1,12 @@
+body {
+  background-color: #33CCFF;
+  font-family: Arial, Helvetica, sans-serif;
+}
 
+#center {
+  text-align: center;
+}
+
+section {
+  background-color: #FFFF99;
+}
