--- a/checklist.css
+++ b/checklist.css
@@ -17,3 +17,10 @@ section {
   margin-left: auto;
   margin-right: auto;
 }
+
+#div {
+  width: 400px;
+  height: 300px;
+  position: center;
+  margin-top: 50px;
+}
