--- a/checklist.css
+++ b/checklist.css
@@ -14,7 +14,8 @@ section {
 #inputbar {
   text-align: center;
   width: 450px;
-  height: 50px;
+  height: 30px;
+  margin-top: 15px;
   margin-left: auto;
   margin-right: auto;
 }
