--- a/checklist.css
+++ b/checklist.css
@@ -15,7 +15,8 @@ section {
   text-align: center;
   width: 450px;
   height: 30px;
-  margin-top: 15px;
+  margin-top: 7.5px;
+  margin-bottom: 7.5px;
   margin-left: auto;
   margin-right: auto;
 }
