--- a/checklist.css
+++ b/checklist.css
@@ -29,6 +29,10 @@ section {
   margin-left: auto;
   margin-right: auto;
 }
+#done {
+ text-decoration: line-through;
+}
+
 #list {
   list-style: none;
 }
